genres doc & refactor
